--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 
 
   /* Make room for a second row in the header */
-  :root { --header-h: 80px; } /* was 48px */
+  :root { --header-h: 86px; } /* was 48px */
   
   /* Header now has two rows: main row + disclaimer row */
   header { grid-template-rows: auto auto; }
@@ -90,14 +90,15 @@
   .disclaimer{
     grid-column: 1 / -1;      /* span all three columns */
     justify-self: center;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 1;
     color: #ff0f0f;
     margin-top: 4px;
     letter-spacing: .2px;
+    font-weight: bold;
   }
   @media (max-width:600px){
-    .disclaimer{ font-size: 11px; }
+    .disclaimer{ font-size: 14px; }
   }
 </style>
 </head>
