--- a/public/index.html
+++ b/public/index.html
@@ -80,33 +80,32 @@
 
 
 
-  :root { --header-h: 72px; } /* adjust if you want more/less header height */
+  :root { --header-h: 72px; } /* adjust height as you like */
 
-  /* two-row header */
   header{
     height: var(--header-h);
     display: grid;
     grid-template-columns: 1fr auto 1fr; /* left | center | right */
-    grid-template-rows: 24px 1fr;        /* row 1: status strip, row 2: main */
+    grid-template-rows: 1fr 24px;        /* row 1: main, row 2: status */
     align-items: center;
     padding: 4px 8px;
     border-bottom: 1px solid #000;
   }
   
-  /* row 2: main title/links centered */
+  /* ROW 1 — title/links centered */
   .center-group{
     grid-column: 2;
-    grid-row: 2;
+    grid-row: 1;
     justify-self: center;
     display: flex;
     align-items: center;
     gap: 10px;
   }
   
-  /* row 1: left + right status */
+  /* ROW 2 — status strip */
   .left-online{
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 2;
     justify-self: start;
     font-size: 12px;
     line-height: 1;
@@ -120,23 +119,21 @@
   }
   .right-id{
     grid-column: 3;
-    grid-row: 1;
+    grid-row: 2;
     justify-self: end;
     font-size: 12px;
     line-height: 1;
   }
-  
-  /* row 1: centered disclaimer */
   .disclaimer{
     grid-column: 2;
-    grid-row: 1;
+    grid-row: 2;
     justify-self: center;
     font-size: 14px;
     line-height: 1;
     color: #ff0f0f;
     letter-spacing: .2px;
     font-weight: bold;
-    pointer-events: none;  /* don't block clicks on links */
+    pointer-events: none; /* don’t block clicks on title links */
   }
   
   @media (max-width:600px){
